Fix padding in hero on mobile

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -18,10 +18,6 @@
     @media (max-width: $md-width) {
       top: calc(50% - 125px);
     }
-
-    @media (max-width: $sm-width) {
-      padding: 0 15px;
-    }
   }
 
   h2 {
